@@ -1,4 +1,5 @@
 Changes for 1.8.1
+ - [ZBX-1467] fixed graph copying (Vedmak)
  - [ZBX-1502] fixed full clone of hosts (Vedmak)
  - [ZBX-1460] forbidded creation of circular template linkages (Vedmak)
  - [ZBX-1441] fixed wrong rememberes link line type (Vedmak)
